--- a/OsmAnd-telegram/res/layout/my_location_sharing_chat.xml
+++ b/OsmAnd-telegram/res/layout/my_location_sharing_chat.xml
@@ -128,87 +128,30 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:layout_gravity="center_vertical"
-					android:layout_marginEnd="@dimen/content_padding_standard"
-					android:layout_marginRight="@dimen/content_padding_standard"
 					android:text="@string/turn_off_location_sharing"
 					android:textColor="?attr/ctrl_active_color"
 					android:textSize="@dimen/hint_text_size"
 					app:typeface="@string/font_roboto_medium" />
 
-				<LinearLayout
-					android:layout_width="match_parent"
+				<net.osmand.telegram.ui.views.TextViewEx
+					android:id="@+id/expires_line"
+					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:orientation="horizontal">
+					android:layout_gravity="center_vertical"
+					android:textColor="?android:attr/textColorSecondary"
+					android:textSize="@dimen/hint_text_size"
+					app:typeface="@string/font_roboto_regular"
+					tools:text="@string/expire_at" />
 
-					<net.osmand.telegram.ui.views.TextViewEx
-						android:id="@+id/stop_in"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_gravity="center_vertical"
-						android:textColor="?android:attr/textColorSecondary"
-						android:textSize="@dimen/hint_text_size"
-						app:typeface="@string/font_roboto_regular"
-						tools:text="@string/expire_at" />
-
-					<net.osmand.telegram.ui.views.TextViewEx
-						android:id="@+id/ending_in_first_part"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_gravity="center_vertical"
-						android:layout_marginLeft="4dp"
-						android:layout_marginRight="4dp"
-						android:textColor="?android:attr/textColorPrimary"
-						android:textSize="@dimen/hint_text_size"
-						app:typeface="@string/font_roboto_mono_bold" />
-
-					<net.osmand.telegram.ui.views.TextViewEx
-						android:id="@+id/ending_in_second_part"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_gravity="center_vertical"
-						android:textColor="?android:attr/textColorSecondary"
-						android:textSize="@dimen/hint_text_size"
-						app:typeface="@string/font_roboto_regular" />
-
-				</LinearLayout>
-
-				<LinearLayout
-					android:layout_width="match_parent"
+				<net.osmand.telegram.ui.views.TextViewEx
+					android:id="@+id/gps_points_line"
+					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:orientation="horizontal">
-
-					<net.osmand.telegram.ui.views.TextViewEx
-						android:id="@+id/gps_points"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_gravity="center_vertical"
-						android:textColor="?android:attr/textColorSecondary"
-						android:textSize="@dimen/hint_text_size"
-						app:typeface="@string/font_roboto_regular"
-						android:text="@string/gps_points" />
-
-					<net.osmand.telegram.ui.views.TextViewEx
-						android:id="@+id/gps_points_collected"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_gravity="center_vertical"
-						android:layout_marginLeft="4dp"
-						android:layout_marginRight="4dp"
-						android:textColor="?android:attr/textColorPrimary"
-						android:textSize="@dimen/hint_text_size"
-						app:typeface="@string/font_roboto_mono_bold" />
-
-					<net.osmand.telegram.ui.views.TextViewEx
-						android:layout_width="wrap_content"
-						android:id="@+id/gps_points_in_buffer_txt"
-						android:layout_height="wrap_content"
-						android:layout_gravity="center_vertical"
-						android:textColor="?android:attr/textColorSecondary"
-						android:textSize="@dimen/hint_text_size"
-						android:text="@string/gps_points_in_buffer"
-						app:typeface="@string/font_roboto_regular" />
-
-				</LinearLayout>
+					android:layout_gravity="center_vertical"
+					android:text="@string/gps_points"
+					android:textColor="?android:attr/textColorSecondary"
+					android:textSize="@dimen/hint_text_size"
+					app:typeface="@string/font_roboto_regular" />
 
 			</LinearLayout>
 
