--- a/OsmAnd-telegram/res/layout/fragement_settings_dialog.xml
+++ b/OsmAnd-telegram/res/layout/fragement_settings_dialog.xml
@@ -82,6 +82,35 @@
 
 				<net.osmand.telegram.ui.views.TextViewEx
 					android:layout_width="match_parent"
+					android:layout_height="@dimen/list_header_height"
+					android:ellipsize="end"
+					android:gravity="center_vertical"
+					android:maxLines="1"
+					android:paddingLeft="@dimen/content_padding_standard"
+					android:paddingRight="@dimen/content_padding_standard"
+					android:text="@string/shared_string_appearance"
+					android:textColor="?android:textColorPrimary"
+					android:textSize="@dimen/list_item_title_text_size"
+					app:typeface="@string/font_roboto_medium"/>
+
+				<LinearLayout
+					android:id="@+id/gps_points_container"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:orientation="vertical"/>
+
+			</LinearLayout>
+
+			<include layout="@layout/list_item_divider"/>
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:background="?attr/card_bg_color"
+				android:orientation="vertical">
+
+				<net.osmand.telegram.ui.views.TextViewEx
+					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:ellipsize="end"
 					android:gravity="center_vertical"
@@ -91,7 +120,7 @@
 					android:text="@string/share_location_as"
 					android:textColor="?android:textColorPrimary"
 					android:textSize="@dimen/list_item_title_text_size"
-					app:firstBaselineToTopHeight="25sp"
+					app:firstBaselineToTopHeight="28sp"
 					app:typeface="@string/font_roboto_medium" />
 
 				<net.osmand.telegram.ui.views.TextViewEx
@@ -175,7 +204,7 @@
 					android:text="@string/osmand_connect"
 					android:textColor="?android:textColorPrimary"
 					android:textSize="@dimen/list_item_title_text_size"
-					app:firstBaselineToTopHeight="25sp"
+					app:firstBaselineToTopHeight="28sp"
 					app:typeface="@string/font_roboto_medium"/>
 
 				<net.osmand.telegram.ui.views.TextViewEx
