--- a/OsmAnd-telegram/res/layout/live_now_chat_card.xml
+++ b/OsmAnd-telegram/res/layout/live_now_chat_card.xml
@@ -186,6 +186,28 @@
 
 				</LinearLayout>
 
+				<LinearLayout
+					android:id="@+id/received_gps_points_container"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:visibility="gone"
+					tools:visibility="visible">
+
+					<net.osmand.telegram.ui.views.TextViewEx
+						android:id="@+id/received_gps_points_description"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:ellipsize="end"
+						android:maxLines="1"
+						android:textColor="?attr/android:textColorSecondary"
+						android:textSize="@dimen/list_item_description_text_size"
+						app:firstBaselineToTopHeight="@dimen/list_item_icon_margin_right"
+						app:typeface="@string/font_roboto_regular"
+						tools:text="@string/received_gps_points" />
+
+				</LinearLayout>
+
 			</LinearLayout>
 
 			<ImageView
