--- a/OsmAnd/res/drawable/btn_border_trans_dark.xml
+++ b/OsmAnd/res/drawable/btn_border_trans_dark.xml
@@ -3,7 +3,8 @@
 	<item android:state_pressed="true">
 		<shape android:shape="rectangle">
 			<corners android:radius="4dp" />
-			<stroke android:width="1dp" android:color="@color/route_info_go_btn_inking_dark" />
+			<solid android:color="@color/active_buttons_and_links_trans_dark" />
+			<stroke android:width="1dp" android:color="@color/active_buttons_and_links_dark" />
 		</shape>
 	</item>
 	<item android:state_enabled="false">
