--- a/OsmAnd/res/drawable/btn_border_trans_rounded_light.xml
+++ b/OsmAnd/res/drawable/btn_border_trans_rounded_light.xml
@@ -3,6 +3,7 @@
 	<item android:state_pressed="true">
 		<shape android:shape="rectangle">
 			<corners android:radius="18dp" />
+			<solid android:color="@color/active_buttons_and_links_trans_light" />
 			<stroke android:width="1dp" android:color="@color/active_buttons_and_links_light" />
 		</shape>
 	</item>
