--- a/OsmAnd/res/values-ru/phrases.xml
+++ b/OsmAnd/res/values-ru/phrases.xml
@@ -3880,4 +3880,7 @@
 	<string name="poi_denotation_natural_monument">Памятник природы</string>
 	<string name="poi_denotation_landmark">Ориентир</string>
 
+	<string name="poi_park_ride">Перехватывающая парковка</string>
+	<string name="poi_park_ride_yes">Да</string>
+
 </resources>
