--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -111,6 +111,7 @@
 	<string name="poi_substation_type">Type</string>
 	<string name="poi_books_type">Books</string>
 	<string name="poi_denotation">Denotation</string>
+	<string name="poi_park_ride">Park and ride</string>
 
 <!--  categories -->
 	<string name="poi_shop">Store</string>
@@ -3902,5 +3903,7 @@
 
 	<string name="poi_denotation_natural_monument">Natural monument</string>
 	<string name="poi_denotation_landmark">Landmark</string>
+
+	<string name="poi_park_ride_yes">Yes</string>
 
 </resources>
