--- a/OsmAnd/res/values-ru/phrases.xml
+++ b/OsmAnd/res/values-ru/phrases.xml
@@ -3882,5 +3882,10 @@
 
 	<string name="poi_park_ride">Перехватывающая парковка</string>
 	<string name="poi_park_ride_yes">Да</string>
+	<string name="poi_park_ride_train">Поезд</string>
+	<string name="poi_park_ride_bus">Автобус</string>
+	<string name="poi_park_ride_metro">Метро</string>
+	<string name="poi_park_ride_tram">Трамвай</string>
+	<string name="poi_park_ride_ferry">Паром</string>
 
 </resources>
