--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3905,5 +3905,11 @@
 	<string name="poi_denotation_landmark">Landmark</string>
 
 	<string name="poi_park_ride_yes">Yes</string>
+	<string name="poi_park_ride_train">Train</string>
+	<string name="poi_park_ride_bus">Bus</string>
+	<string name="poi_park_ride_metro">Subway</string>
+	<string name="poi_park_ride_hov">HOV</string>
+	<string name="poi_park_ride_tram">Tram</string>
+	<string name="poi_park_ride_ferry">Ferry</string>
 
 </resources>
