--- a/OsmAnd-telegram/res/layout/login_dialog.xml
+++ b/OsmAnd-telegram/res/layout/login_dialog.xml
@@ -125,6 +125,7 @@
 			android:background="@android:color/transparent">
 
 			<ScrollView
+				android:id="@+id/scroll_view"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:fillViewport="true">
