--- a/OsmAnd-telegram/res/layout/user_list_item.xml
+++ b/OsmAnd-telegram/res/layout/user_list_item.xml
@@ -47,6 +47,7 @@
 					android:maxLines="1"
 					android:textColor="?android:textColorPrimary"
 					android:textSize="@dimen/list_item_title_text_size"
+					android:paddingTop="@dimen/content_padding_half"
 					app:typeface="@string/font_roboto_regular"
 					tools:text="Share location"/>
 
@@ -112,6 +113,7 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:visibility="gone"
+					android:paddingBottom="@dimen/content_padding_half"
 					tools:visibility="visible">
 
 					<net.osmand.telegram.ui.views.TextViewEx
