--- a/OsmAnd/res/layout/home_work_card.xml
+++ b/OsmAnd/res/layout/home_work_card.xml
@@ -15,6 +15,7 @@
 	</LinearLayout>
 
 	<LinearLayout
+		android:id="@+id/card_content"
 		android:layout_width="match_parent"
 		android:layout_height="@dimen/route_info_card_row_min_height"
 		android:background="?attr/bg_color"
@@ -32,6 +33,7 @@
 			android:orientation="horizontal">
 
 			<android.support.v7.widget.AppCompatImageView
+				android:id="@+id/home_img"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginStart="@dimen/list_content_padding"
@@ -39,7 +41,7 @@
 				android:layout_marginEnd="@dimen/favorites_icon_right_margin"
 				android:layout_marginRight="@dimen/favorites_icon_right_margin"
 				android:src="@drawable/ic_action_home_dark"
-				android:tint="?attr/menu_bottom_sheet_icon_color" />
+				tools:tint="?attr/route_info_control_icon_color" />
 
 			<LinearLayout
 				android:layout_width="match_parent"
@@ -56,9 +58,9 @@
 					android:letterSpacing="@dimen/text_button_letter_spacing"
 					android:maxLines="1"
 					android:text="@string/home_button"
-					android:textColor="?android:attr/textColorPrimary"
 					android:textSize="@dimen/default_list_text_size"
-					tools:ignore="UnusedAttribute" />
+					tools:ignore="UnusedAttribute"
+					tools:textColor="?android:attr/textColorPrimary" />
 
 				<TextView
 					android:id="@+id/home_button_descr"
@@ -68,19 +70,20 @@
 					android:letterSpacing="@dimen/text_button_letter_spacing"
 					android:maxLines="1"
 					android:text="@string/home_button"
-					android:textColor="?android:attr/textColorSecondary"
 					android:textSize="@dimen/default_desc_text_size"
 					tools:ignore="UnusedAttribute"
-					tools:text="Amsterdam" />
+					tools:text="Amsterdam"
+					tools:textColor="?android:attr/textColorSecondary" />
 
 			</LinearLayout>
 
 		</LinearLayout>
 
 		<View
+			android:id="@+id/buttons_divider"
 			android:layout_width="1dp"
 			android:layout_height="36dp"
-			android:background="?attr/divider_color" />
+			tools:background="?attr/divider_color" />
 
 		<LinearLayout
 			android:id="@+id/work_button"
@@ -92,6 +95,7 @@
 			android:orientation="horizontal">
 
 			<android.support.v7.widget.AppCompatImageView
+				android:id="@+id/work_img"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginStart="@dimen/list_content_padding"
@@ -99,7 +103,7 @@
 				android:layout_marginEnd="@dimen/favorites_icon_right_margin"
 				android:layout_marginRight="@dimen/favorites_icon_right_margin"
 				android:src="@drawable/ic_action_work"
-				android:tint="?attr/menu_bottom_sheet_icon_color" />
+				tools:tint="?attr/route_info_control_icon_color" />
 
 			<LinearLayout
 				android:layout_width="match_parent"
@@ -116,9 +120,9 @@
 					android:letterSpacing="@dimen/text_button_letter_spacing"
 					android:maxLines="1"
 					android:text="@string/work_button"
-					android:textColor="?android:attr/textColorPrimary"
 					android:textSize="@dimen/default_list_text_size"
-					tools:ignore="UnusedAttribute" />
+					tools:ignore="UnusedAttribute"
+					tools:textColor="?android:attr/textColorPrimary" />
 
 				<TextView
 					android:id="@+id/work_button_descr"
@@ -128,10 +132,10 @@
 					android:letterSpacing="@dimen/text_button_letter_spacing"
 					android:maxLines="1"
 					android:text="@string/work_button"
-					android:textColor="?android:attr/textColorSecondary"
 					android:textSize="@dimen/default_desc_text_size"
 					tools:ignore="UnusedAttribute"
-					tools:text="Business centre" />
+					tools:text="Business centre"
+					tools:textColor="?android:attr/textColorSecondary" />
 
 			</LinearLayout>
 
