--- a/OsmAnd/res/values/styles.xml
+++ b/OsmAnd/res/values/styles.xml
@@ -236,6 +236,7 @@
         <item name="text_rounded_bg_regular">@drawable/text_rounded_bg_regular_light</item>
 
         <item name="menu_bottom_sheet_icon_color">@color/on_map_icon_color</item>
+        <item name="route_info_control_icon_color">@color/route_info_control_icon_color_light</item>
     </style>
 
     <style name="OverflowMenuButton" parent="@style/Widget.AppCompat.ActionButton.Overflow">
@@ -458,6 +459,7 @@
         <item name="text_rounded_bg_regular">@drawable/text_rounded_bg_regular_dark</item>
 
         <item name="menu_bottom_sheet_icon_color">@color/ctx_menu_info_text_dark</item>
+        <item name="route_info_control_icon_color">@color/route_info_control_icon_color_dark</item>
     </style>
 
     <style name="FreeVersionBanner" parent="OsmandDarkTheme">
