--- a/OsmAnd/res/layout/plan_route_info.xml
+++ b/OsmAnd/res/layout/plan_route_info.xml
@@ -12,6 +12,20 @@
 		android:layout_height="match_parent"
 		android:orientation="vertical">
 
+		<FrameLayout
+			android:id="@+id/top_shadow"
+			android:layout_width="match_parent"
+			android:layout_height="16dp">
+
+			<ImageView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_gravity="bottom"
+				android:scaleType="fitXY"
+				android:src="@drawable/bg_shadow_onmap" />
+
+		</FrameLayout>
+
 		<LinearLayout
 			android:id="@+id/route_menu_top_shadow_all"
 			android:layout_width="match_parent"
