--- a/OsmAnd/res/layout/prev_route_card.xml
+++ b/OsmAnd/res/layout/prev_route_card.xml
@@ -35,6 +35,7 @@
 			android:gravity="center_vertical">
 
 			<TextView
+				android:id="@+id/prev_route_card_title"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_marginStart="@dimen/list_content_padding"
