--- a/OsmAnd/res/layout/gpx_route_card.xml
+++ b/OsmAnd/res/layout/gpx_route_card.xml
@@ -24,7 +24,7 @@
 		android:id="@+id/card_content"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:background="?attr/bg_color"
+		android:background="?attr/route_info_bg"
 		android:baselineAligned="false"
 		android:gravity="center_vertical"
 		android:orientation="vertical"
@@ -41,6 +41,7 @@
 				android:layout_height="wrap_content"
 				android:layout_marginStart="@dimen/list_content_padding"
 				android:layout_marginLeft="@dimen/list_content_padding"
+				android:textColor="?android:attr/textColorSecondary"
 				tools:text="Tracks on the map - 10" />
 
 		</LinearLayout>
@@ -65,7 +66,7 @@
 				android:layout_gravity="top"
 				android:layout_marginStart="@dimen/route_info_list_text_padding"
 				android:layout_marginLeft="@dimen/route_info_list_text_padding"
-				tools:background="?attr/dashboard_divider" />
+				android:background="?attr/dashboard_divider" />
 
 			<net.osmand.plus.widgets.TextViewEx
 				android:id="@+id/show_all_title"
@@ -74,11 +75,11 @@
 				android:layout_gravity="center_vertical"
 				android:layout_marginStart="@dimen/route_info_list_text_padding"
 				android:layout_marginLeft="@dimen/route_info_list_text_padding"
+				android:textColor="?attr/color_dialog_buttons"
 				android:textSize="@dimen/default_sub_text_size"
 				osmand:textAllCapsCompat="true"
 				osmand:typeface="@string/font_roboto_medium"
 				tools:text="SHOW ALL"
-				tools:textColor="?attr/color_dialog_buttons"
 				tools:visibility="visible" />
 
 		</FrameLayout>
