--- a/OsmAnd/res/layout/home_work_card.xml
+++ b/OsmAnd/res/layout/home_work_card.xml
@@ -14,9 +14,9 @@
 
 		<View
 			android:layout_width="match_parent"
-			android:layout_height="8dp"/>
+			android:layout_height="8dp" />
 
-		<include layout="@layout/card_top_divider"/>
+		<include layout="@layout/card_top_divider" />
 
 	</LinearLayout>
 
@@ -24,7 +24,7 @@
 		android:id="@+id/card_content"
 		android:layout_width="match_parent"
 		android:layout_height="@dimen/route_info_card_row_min_height"
-		android:background="?attr/bg_color"
+		android:background="?attr/route_info_bg"
 		android:baselineAligned="false"
 		android:gravity="center_vertical"
 		android:orientation="horizontal">
@@ -47,7 +47,7 @@
 				android:layout_marginEnd="@dimen/favorites_icon_right_margin"
 				android:layout_marginRight="@dimen/favorites_icon_right_margin"
 				android:src="@drawable/ic_action_home_dark"
-				tools:tint="?attr/route_info_control_icon_color" />
+				android:tint="?attr/route_info_control_icon_color" />
 
 			<LinearLayout
 				android:layout_width="match_parent"
@@ -64,9 +64,9 @@
 					android:letterSpacing="@dimen/text_button_letter_spacing"
 					android:maxLines="1"
 					android:text="@string/home_button"
+					android:textColor="?android:attr/textColorPrimary"
 					android:textSize="@dimen/default_list_text_size"
-					tools:ignore="UnusedAttribute"
-					tools:textColor="?android:attr/textColorPrimary" />
+					tools:ignore="UnusedAttribute" />
 
 				<TextView
 					android:id="@+id/home_button_descr"
@@ -76,10 +76,10 @@
 					android:letterSpacing="@dimen/text_button_letter_spacing"
 					android:maxLines="1"
 					android:text="@string/home_button"
+					android:textColor="?android:attr/textColorSecondary"
 					android:textSize="@dimen/default_desc_text_size"
 					tools:ignore="UnusedAttribute"
-					tools:text="Amsterdam"
-					tools:textColor="?android:attr/textColorSecondary" />
+					tools:text="Amsterdam" />
 
 			</LinearLayout>
 
@@ -89,7 +89,7 @@
 			android:id="@+id/buttons_divider"
 			android:layout_width="1dp"
 			android:layout_height="36dp"
-			tools:background="?attr/divider_color" />
+			android:background="?attr/divider_color" />
 
 		<LinearLayout
 			android:id="@+id/work_button"
@@ -109,7 +109,7 @@
 				android:layout_marginEnd="@dimen/favorites_icon_right_margin"
 				android:layout_marginRight="@dimen/favorites_icon_right_margin"
 				android:src="@drawable/ic_action_work"
-				tools:tint="?attr/route_info_control_icon_color" />
+				android:tint="?attr/route_info_control_icon_color" />
 
 			<LinearLayout
 				android:layout_width="match_parent"
@@ -126,9 +126,9 @@
 					android:letterSpacing="@dimen/text_button_letter_spacing"
 					android:maxLines="1"
 					android:text="@string/work_button"
+					android:textColor="?android:attr/textColorPrimary"
 					android:textSize="@dimen/default_list_text_size"
-					tools:ignore="UnusedAttribute"
-					tools:textColor="?android:attr/textColorPrimary" />
+					tools:ignore="UnusedAttribute" />
 
 				<TextView
 					android:id="@+id/work_button_descr"
@@ -138,10 +138,10 @@
 					android:letterSpacing="@dimen/text_button_letter_spacing"
 					android:maxLines="1"
 					android:text="@string/work_button"
+					android:textColor="?android:attr/textColorSecondary"
 					android:textSize="@dimen/default_desc_text_size"
 					tools:ignore="UnusedAttribute"
-					tools:text="Business centre"
-					tools:textColor="?android:attr/textColorSecondary" />
+					tools:text="Business centre" />
 
 			</LinearLayout>
 
