--- a/OsmAnd/res/layout/prev_route_card.xml
+++ b/OsmAnd/res/layout/prev_route_card.xml
@@ -88,6 +88,7 @@
 					android:id="@+id/destination_title"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
+					android:layout_marginTop="5dp"
 					android:textColor="?android:attr/textColorPrimary"
 					android:ellipsize="end"
 					android:letterSpacing="@dimen/text_button_letter_spacing"
