--- a/OsmAnd/res/layout/plan_route_info.xml
+++ b/OsmAnd/res/layout/plan_route_info.xml
@@ -173,18 +173,18 @@
 								android:layout_width="0dp"
 								android:layout_height="wrap_content"
 								android:layout_gravity="center"
+								android:layout_marginStart="@dimen/content_padding_small"
+								android:layout_marginLeft="@dimen/content_padding_small"
 								android:layout_weight="1"
 								android:ellipsize="end"
 								android:gravity="center"
 								android:letterSpacing="@dimen/text_button_letter_spacing"
 								android:maxLines="1"
+								android:text="@string/shared_string_swap"
 								android:textSize="@dimen/text_button_text_size"
-								android:visibility="gone"
 								osmand:typeface="@string/font_roboto_medium"
 								tools:ignore="UnusedAttribute"
-								tools:text="@string/shared_string_edit"
-								tools:textColor="?attr/wikivoyage_active_color"
-								tools:visibility="gone" />
+								tools:textColor="?attr/wikivoyage_active_color" />
 
 							<ImageView
 								android:id="@+id/from_button_image_view"
