--- a/OsmAnd/res/values-ru/phrases.xml
+++ b/OsmAnd/res/values-ru/phrases.xml
@@ -3888,4 +3888,6 @@
 	<string name="poi_park_ride_tram">Трамвай</string>
 	<string name="poi_park_ride_ferry">Паром</string>
 
+	<string name="poi_generator_source_biomass">Источник энергии: биомасса</string>
+
 </resources>
